--- a/CPlusPlus/CPlusPlus.vcxproj
+++ b/CPlusPlus/CPlusPlus.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="1_Practice.cpp" />
     <ClCompile Include="2_Practice.cpp" />
+    <ClCompile Include="3_Practice.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
