--- a/CPlusPlus/CPlusPlus.vcxproj
+++ b/CPlusPlus/CPlusPlus.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="1_Practice.cpp" />
     <ClCompile Include="2_Practice.cpp" />
     <ClCompile Include="3_Practice.cpp" />
+    <ClCompile Include="4_Practice.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
