--- a/CPlusPlus/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus/CPlusPlus.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="3_Practice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="4_Practice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
