--- a/CPlusPlus/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus/CPlusPlus.vcxproj.filters
@@ -30,5 +30,14 @@
     <ClCompile Include="5_Practice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="6_Practice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="7_Practice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="8_Practice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
