--- a/CPlusPlus/CPlusPlus.vcxproj
+++ b/CPlusPlus/CPlusPlus.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="10_Practice.cpp" />
     <ClCompile Include="1_Practice.cpp" />
     <ClCompile Include="2_Practice.cpp" />
     <ClCompile Include="3_Practice.cpp" />
@@ -135,6 +136,7 @@
     <ClCompile Include="6_Practice.cpp" />
     <ClCompile Include="7_Practice.cpp" />
     <ClCompile Include="8_Practice.cpp" />
+    <ClCompile Include="9_Practice.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
