--- a/CPlusPlus/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus/CPlusPlus.vcxproj.filters
@@ -39,5 +39,11 @@
     <ClCompile Include="8_Practice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="9_Practice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10_Practice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
